--- a/src/app/organizador/organizador-detail/organizador-detail.component.html
+++ b/src/app/organizador/organizador-detail/organizador-detail.component.html
@@ -6,6 +6,8 @@
               <dl>     
                   <dt>Edad</dt>
                   <dd>{{organizadorDetail.edad}}</dd>
+                  <dt>Telefono</dt>
+                  <dd>{{organizadorDetail.telefono}}</dd>
                   <dt>Pais</dt>
                   <dd>{{organizadorDetail.pais}}</dd>
               </dl>
