photo list begin

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,23 @@
             <div class="form-inline">
                 <h2 class="mainTitle">s2_fotografia-Front</h2>
             </div>
+            <div class="navbar-nav mr-auto mt-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Fotos</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" class="nav-item nav-link" [routerLink]="['/photos/list']">Fotos</a>
+                    </div>
+                </li>
+            </div>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="navbar-nav mr-auto mt-0">
-                
+
             </div>
             <div class="navbar-nav ml-auto flex-column">
                 <div class="flex-row" *ngxPermissionsOnly="['GUEST']">
@@ -21,10 +30,12 @@
                         <li><a id="login-navbar-item" routerLink="/auth/login"><span class="fa fa-sign-in"></span>Login</a></li>
                     </div>
                 </div>
+
                 <div class="flex-row" *ngxPermissionsOnly="['CLIENT', 'ADMIN']">
                     <div class="form-inline">
                         <li><a id="logout-navbar-item" (click)="logout()" href="#"><span class="fa fa-sign-out"></span>Logout</a></li>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -42,5 +53,6 @@
                 <a routerLink="/home"> s2_fotografia-Front</a>
             </p>
         </div>
+
     </footer>
 </div>
