Photo list button connected and working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,9 @@
                         &nbsp;
                         &nbsp;
                         <li><a id="organizadorsTag" routerLink="/organizadors/list"> Organizadores</a></li>
+                        &nbsp;
+                        &nbsp;
+                        <li><a id="calificacion-navbar-item" routerLink="/photos/list"> Fotos</a></li>
                     </div>
                     <div class="navbar-nav ml-auto flex-column">
                         <div class="flex-row" *ngxPermissionsOnly="['GUEST']">
