--- a/src/app/photo/photo-list/photo-list.component.html
+++ b/src/app/photo/photo-list/photo-list.component.html
@@ -1,17 +1,16 @@
-<div class="container-fluid">
-    <div class="col">
-        <table class="table table-striped">
-            <thead class="thead-dark">
-                <tr>
-                    <th>Photo Name</th>    
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor = "let photo of photos">
-                    <td>{{photo.name}}</td>
 
-                </tr>
-            </tbody>
-        </table>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col" *ngFor = "let photo of photos">
+             <figure class="figure"> 
+                <div class="img-thumbnail border-0">                        
+                    <img class="img-fluid" src='https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Herbstlandschaft_%28am_Rebhang%29.jpg/270px-Herbstlandschaft_%28am_Rebhang%29.jpg' alt="{{photo.name}}" />                                     
+                </div>
+                <figcaption class="figure-caption text-center">{{photo.name}}</figcaption>
+            </figure>
+        </div>
+    </div>
+    <div class="img-thumbnail border-0">                        
+        <img class="img-fluid" src='https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Herbstlandschaft_%28am_Rebhang%29.jpg/270px-Herbstlandschaft_%28am_Rebhang%29.jpg' alt="{{photo.name}}" />                                     
     </div>
 </div>
