--- a/src/app/concurso/concurso-create/concurso-create.component.html
+++ b/src/app/concurso/concurso-create/concurso-create.component.html
@@ -4,34 +4,52 @@
     
     <!--      -->
     <div class="row" style="padding-top:50px">
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 ">
-            <form name="concurso" ngSubmit="f.form && createConcurso()" #f="ngForm" novalidate>
+        <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+            <form name="concurso" ngSubmit="createConcurso()" #f="ngForm" novalidate>
                 <div class="form-group">
                     <label for="concursoName"><b>Name</b></label>
-                    <input type="text" name="concursoName" class="form-control" id="concursoName" [(ngModel)]="concurso.tema"
-                           #concursoName="ngModel" ngClass="{ 'is-invalid': f.submitted && concursoName.invalid }" required>
+                    <input type="text" name="concursoName" class="form-control" id="concursoName" ng-model="concurso.tema"
+                            ngClass="{ 'is-invalid': f.submitted && concursoName.invalid }" required>
                            <div class="invalid-feedback">
                         <div> Falta poner el tema</div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="concursoEdadFoto"><b>Pon la edad maxima que debe tener una foto:</b></label>
-                    <input type="number" name="concursoEdadFoto" class="form-control" id="concusoEdadFoto" [(ngModel)]="concurso.edadDeLaFoto"
-                           #concursoEdadFoto="ngModel" ngClass="{ 'is-invalid': f.submitted && concursoEdadFoto.invalid }" required>
+                    <input type="number" name="concursoEdadFoto" class="form-control" id="concusoEdadFoto" ng-model="concurso.edadDeLaFoto"
+                           ngClass="{ 'is-invalid': f.submitted && concursoEdadFoto.invalid }" required>
                            <div class="invalid-feedback">
                         <div> Falta poner la edad maxima de una foto</div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="concursoMaxFotos"><b>Pon el máximo numero de fotos que un fotografo puede subir:</b></label>
-                    <input type="number" name="concursoMaxFotos" class="form-control" id="concursoMaxFotos" [(ngModel)]="concurso.maxFotos"
-                           #concursoMaxFotos="ngModel" ngClass="{ 'is-invalid': f.submitted && concursoMaxFotos.invalid }" required>
+                    <input type="number" name="concursoMaxFotos" class="form-control" id="concursoMaxFotos" ng-model="concurso.maxFotos"
+                           ngClass="{ 'is-invalid': f.submitted && concursoMaxFotos.invalid }" required>
                            <div class="invalid-feedback">
                         <div> Falta poner el numero maximo de fotos</div>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-success">Crear</button>
+                <div class="form-group">
+                    <label for="concursoFecha"><b>Elige la fecha del concurso:</b></label>
+                    <input type="date" name="concursoFecha" class="form-control" id="concursoFecha" ng-model="concurso.fechaDelConcurso"
+                            ngClass="{ 'is-invalid': f.submitted && concursoFecha.invalid }" required>
+
+                           <div class="invalid-feedback">
+                        <div> Falta poner la fecha del concurso</div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="concursoPremio"><b>Pon la cantidad a ganar: </b></label>
+                    <input type="number" name="concursoPremio" class="form-control" id="concursoPremio" ng-model="concurso.cantidadPremio"
+                            ngClass="{ 'is-invalid': f.submitted && concursoPremio.invalid }" required>
+                           <div class="invalid-feedback">
+                        <div> Falta la cantidad del premio</div>
+                    </div>
+                </div>
+                <input type="submit" id="submit" value="Submit" class="btn btn-success">
             </form>
         </div>
     </div>
+
 </div>
