--- a/src/app/concurso/concurso-create/concurso-create.component.html
+++ b/src/app/concurso/concurso-create/concurso-create.component.html
@@ -1,55 +1,53 @@
-<div class="container-fluid">
-
-    <h3> Crear Concurso </h3>
-    
-    <!--      -->
-    <div class="row" style="padding-top:50px">
-        <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-            <form name="concurso" ngSubmit="createConcurso()" #f="ngForm" novalidate>
+<div class="row">
+        <div class="col">
+            <h3> Crear Concurso </h3>
+            <form name="concurso" (ngSubmit)="f.form.valid && createConcurso()" #f="ngForm" novalidate>
                 <div class="form-group">
-                    <label for="concursoName"><b>Name</b></label>
-                    <input type="text" name="concursoName" class="form-control" id="concursoName" ng-model="concurso.tema"
-                            ngClass="{ 'is-invalid': f.submitted && concursoName.invalid }" required>
+                    <label for="concursoTema"><b>Tema</b></label>
+                    <input type="text" name="concursoTema" class="form-control" id="concursoTema" [(ngModel)]="concurso.tema"
+                            #concursoTema="ngModel" ngClass="{ 'is-invalid': f.submitted && concursoTema.invalid }" required>
                            <div class="invalid-feedback">
                         <div> Falta poner el tema</div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="concursoEdadFoto"><b>Pon la edad maxima que debe tener una foto:</b></label>
-                    <input type="number" name="concursoEdadFoto" class="form-control" id="concusoEdadFoto" ng-model="concurso.edadDeLaFoto"
-                           ngClass="{ 'is-invalid': f.submitted && concursoEdadFoto.invalid }" required>
+                    <label for="concursoEdadDeLaFoto"><b>Pon la edad maxima que debe tener una foto:</b></label>
+                    <input type="number" name="concursoEdadDeLaFoto" class="form-control" id="concusoEdadDeLaFoto" [(ngModel)]="concurso.edadDeLaFoto"
+                           #concursoEdadDeLaFoto="ngModel" ngClass="{ 'is-invalid': f.submitted && concursoEdadDeLaFoto.invalid }" required>
                            <div class="invalid-feedback">
                         <div> Falta poner la edad maxima de una foto</div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="concursoMaxFotos"><b>Pon el máximo numero de fotos que un fotografo puede subir:</b></label>
-                    <input type="number" name="concursoMaxFotos" class="form-control" id="concursoMaxFotos" ng-model="concurso.maxFotos"
-                           ngClass="{ 'is-invalid': f.submitted && concursoMaxFotos.invalid }" required>
+                    <input type="number" name="concursoMaxFotos" class="form-control" id="concursoMaxFotos" [(ngModel)]="concurso.maxFotos"
+                           #concursoMaxFotos="ngModel" ngClass="{ 'is-invalid': f.submitted && concursoMaxFotos.invalid }" required>
                            <div class="invalid-feedback">
                         <div> Falta poner el numero maximo de fotos</div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="concursoFecha"><b>Elige la fecha del concurso:</b></label>
-                    <input type="date" name="concursoFecha" class="form-control" id="concursoFecha" ng-model="concurso.fechaDelConcurso"
-                            ngClass="{ 'is-invalid': f.submitted && concursoFecha.invalid }" required>
+                    <label for="concursoFechaDelConcurso"><b>Elige la fecha del concurso:</b></label>
+                    <input type="date" name="concursoFechaDelConcurso" class="form-control" id="concursoFechaDelConcurso" [(ngModel)]="concurso.fechaDelConcurso"
+                            #concursoFechaDelConcurso="ngModel" ngClass="{ 'is-invalid': f.submitted && concursoFechaDelConcurso.invalid }" required>
 
                            <div class="invalid-feedback">
                         <div> Falta poner la fecha del concurso</div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="concursoPremio"><b>Pon la cantidad a ganar: </b></label>
-                    <input type="number" name="concursoPremio" class="form-control" id="concursoPremio" ng-model="concurso.cantidadPremio"
-                            ngClass="{ 'is-invalid': f.submitted && concursoPremio.invalid }" required>
+                    <label for="concursoPremioCantidad"><b>Pon la cantidad a ganar: </b></label>
+                    <input type="number" name="concursoPremioCantidad" class="form-control" id="concursoPremioCantidad" [(ngModel)]="concurso.premioCantidad"
+                            #concursoPremioCantidad="ngModel" ngClass="{ 'is-invalid': f.submitted && concursoPremioCantidad.invalid }" required>
                            <div class="invalid-feedback">
                         <div> Falta la cantidad del premio</div>
                     </div>
                 </div>
-                <input type="submit" id="submit" value="Submit" class="btn btn-success">
+                <div class="row form-inline justify-content-center align-self-center">
+                <button type="submit" class="btn btn-primary">Create</button>
+                <div class="divider"></div>
+                <button type="button" class="btn btn-danger" (click)="cancelCreation()">Cancel</button>
+                </div>
             </form>
         </div>
     </div>
-
-</div>
