--- a/src/app/concurso/concurso-list/concurso-list.component.html
+++ b/src/app/concurso/concurso-list/concurso-list.component.html
@@ -3,7 +3,7 @@
         <table class="table table-striped">
             <thead class="thead-dark">
                 <tr>
-                    <th>Editorial Name</th>    
+                    <th>Concursos</th>    
                 </tr>
             </thead>
             <tbody>
