--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,10 @@
                         <li><a id="jurado-navbar-item" routerLink="/jurados/list"><i class="fa fa-male"></i>Jurados</a></li>  
                         &nbsp;
                         &nbsp;
-                        <li><a id="organizadorsTag" routerLink="/organizadors/list"> Organizadores</a></li>
+                        <li><a id="organizadorsTag" routerLink="/organizadors/list"><i class="fa fa-male"></i> Organizadores</a></li>
+                        &nbsp;
+                        &nbsp;
+                        <li><a id="rondasTag" routerLink="/rondas/list"><i class="fa fa-male"></i> Rondas</a></li>
                     </div>
                     <div class="navbar-nav ml-auto flex-column">
                         <div class="flex-row" *ngxPermissionsOnly="['GUEST']">
