--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,14 @@
                         &nbsp;
                         &nbsp;
                         <li><a id="organizadorsTag" routerLink="/organizadors/list"> Organizadores</a></li>
+                        &nbsp;
+                        &nbsp;
+                        <li><a id="clienteItem" routerLink="/clientes/list">Clientes</a></li>  
+                        &nbsp;
+                        &nbsp;
+                        <li><a id="registroItem" routerLink="/clientes/registro">Registro</a></li>  
+                        &nbsp;
+                        &nbsp;
                     </div>
                     <div class="navbar-nav ml-auto flex-column">
                         <div class="flex-row" *ngxPermissionsOnly="['GUEST']">
