--- a/src/app/photo/photo-detail/photo-detail.component.html
+++ b/src/app/photo/photo-detail/photo-detail.component.html
@@ -1,4 +1,4 @@
-<!--<div class="panel panel-default">
+<<div class="panel panel-default">
   <div>
     <div class="border margin">
       <p class="h3 p-3">{{photoDetail.name}}</p>
@@ -6,7 +6,7 @@
         <div class="col-md-3">
           
                     <div class="thumb">
-                        <img class="img-fluid" src="{{photoDetail.image}}"/>
+                        <img class="img-fluid" src="{{photoDetail.rutaImagen}}"/>
                     </div>
                     
         </div>
@@ -18,9 +18,11 @@
             <dt>Fecha</dt>
             <dd>{{photoDetail.date| date:'yyyy-MM-dd'}}</dd>
             <hr>
+            <!--
             <dt class="bold">Fotografo</dt>
             <dd class="caption" routerLink="/editorials/{{bookDetail.editorial.id}}">{{bookDetail.editorial.name}}</dd>
             <hr>
+            -->
             <dt class="bold">Description</dt>
             <dd>{{photoDetail.description}}</dd>
           </dl>
@@ -28,10 +30,4 @@
       </div>
     </div>
   </div>
-  <div class="row border margin">
-        <p class="h3 p-3">Other photos you may like</p>
-        <app-photo-list [photo]="other_photos"></app-photo-list>
-    </div>
-
 </div>
--->
