--- a/src/app/photo/photo-list/photo-list.component.html
+++ b/src/app/photo/photo-list/photo-list.component.html
@@ -1,29 +1,28 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col" *ngFor="let photo of photos">
-            <figure class="figure">
-                <figcaption class="figure-caption text-center">{{photo.name}}dd</figcaption>
-                <a>dsf</a>
-            </figure>
-        </div>
-    </div>
-</div>
 <tbody>
-        <tr *ngFor="let photo of photos">
-            <td style="cursor: pointer;">
-                <dd style="text-align: center;" routerLink="/photos/{{photo.id}}">{{photo.nombre}}</dd>
-            </td>
-        </tr>
-    </tbody>
+    <tr *ngFor="let photo of photos">
+        <td style="cursor: pointer;">
+            <dd style="text-align: center;" routerLink="/photos/{{photo.id}}">{{photo.nombre}}</dd>
+        </td>
+    </tr>
+</tbody>
+<div class="col-md-2" *ngFor = "let photo of photos">
+        <figure class="figure" routerLink="/photos/{{photo.id}}" style="cursor: pointer;"> 
+            <div class="img-thumbnail border-0">                        
+                <img class="img-fluid" src='{{photo.rutaFoto}}' alt="{{photo.nombre}}" />                                     
+            </div>
+            <figcaption class="title-caption text-center">{{photo.name}}</figcaption>
+        </figure>
+    </div>
 <div class="pin-layout">
     <div class="thumbnail">
         <br>
         <div class="row justify-content-center align-self-center">
             <button [ngClass]="{ 'btn-primary': !showCreate, 'btn-danger': showCreate }" type="button" class="btn" (click)="showHideCreate()">Crear
-                Calificación</button>
+                Calificación
+            </button>
         </div>
         <br>
-       
+
         <br>
         <style>
             table,
