--- a/src/app/cliente/cliente-detail/cliente-detail.component.html
+++ b/src/app/cliente/cliente-detail/cliente-detail.component.html
@@ -1,17 +1,8 @@
 <div class = "container-fluid w-50">
 
-  <table class = "table table-stripped">
-    <thead>
-      <tr class="table-info">
-        <th class = "text-center">
-        </th>
-      </tr>
-    </thead>
-
-  </table>
 
   <div class="card ">
-    <img src="{{clienteDetail.image}}" class="card-img-top" alt="Profile Picture">
+    <img src="http://icons.iconarchive.com/icons/pelfusion/long-shadow-media/512/Camera-icon.png" class="card-img-top" alt="Profile Picture">
     <div class="card-body">
       <h3 class="card-title text-center">{{clienteDetail.nombre}}</h3>
       
