--- a/src/app/photo/photo-list/photo-list.component.html
+++ b/src/app/photo/photo-list/photo-list.component.html
@@ -5,28 +5,28 @@
         </td>
     </tr>
 </tbody>
-<div class="col-md-2" *ngFor = "let photo of photos">
-        <figure class="figure" routerLink="/photos/{{photo.id}}" style="cursor: pointer;"> 
-            <div class="img-thumbnail border-0">                        
-                <img class="img-fluid" src='{{photo.rutaFoto}}' alt="{{photo.nombre}}" />                                     
-            </div>
-            <figcaption class="title-caption text-center">{{photo.name}}</figcaption>
-        </figure>
-    </div>
+<div class="col-md-2" *ngFor="let photo of photos">
+    <figure class="figure" routerLink="/photos/{{photo.id}}" style="cursor: pointer;">
+        <div class="img-thumbnail border-0">
+            <img class="img-fluid" src='{{photo.rutaFoto}}' alt="{{photo.nombre}}" />
+        </div>
+        <figcaption class="title-caption text-center">{{photo.name}}</figcaption>
+    </figure>
+</div>
 <div class="pin-layout">
     <div class="thumbnail">
-            <br>
-            <div class="row justify-content-center align-self-center">
-                <button [ngClass]="{ 'btn-primary': !showCreate, 'btn-danger': showCreate }" type="button" class="btn"
-                    (click)="showHideCreate()">Crear foto</button>
+        <br>
+        <div class="row justify-content-center align-self-center">
+            <button [ngClass]="{ 'btn-primary': !showCreate, 'btn-danger': showCreate }" type="button" class="btn" (click)="showHideCreate()">Crear
+                foto</button>
+        </div>
+        <br>
+        <div class="col-md-8">
+            <div *ngIf="showCreate">
+                <app-photo-create (cancel)="showHideCreate()" (create)="ngOnInit()" *ngIf="showCreate"></app-photo-create>
             </div>
-            <br>
-            <div class="col-md-8">
-                <div *ngIf="showCreate">
-                    <app-photo-create (cancel)="showHideCreate()" (create)="ngOnInit()" *ngIf="showCreate"></app-photo-create>
-                </div>
-            </div>
-            <br>
+        </div>
+        <br>
         <style>
             table,
             th,
@@ -60,5 +60,10 @@
                 </tr>
             </tbody>
         </table>
+        <div class="col-md-8">
+            <div *ngIf="showEdit">
+                <app-photo-edit [photo_edit]="photo_edit_id" (cancel)="showHideEdit(photo_edit_id)" (update)="updatePhoto()"></app-photo-edit>
+            </div>
+        </div>
     </div>
 </div>
