--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,9 @@
                         <li><a id="jurado-navbar-item" routerLink="/jurados/list"><i class="fa fa-male"></i>Jurados</a></li>
                         &nbsp;
                         &nbsp;
+                        <li><a id="fotografo-navbar-item" routerLink="/fotografos/list">Fotografos</a></li>  
+                        &nbsp;
+                        &nbsp;
 
                         <li><a id="organizadorsTag" routerLink="/organizadors/list"> Organizadores</a></li>
                         &nbsp;
