--- a/src/app/cliente/cliente-create/cliente-create.component.html
+++ b/src/app/cliente/cliente-create/cliente-create.component.html
@@ -34,23 +34,15 @@
         </div>
         <div class="form-group">
               <label for="clienteNombre">Nombre</label>
-              <input type="text" name="clienteNombre" class="form-control" id="clienteNombre" [(ngModel)]="cliente.nombre"
+              <input type="text" name="clienteNombre" class="form-control" id="clienteNombre" placeholder="Nombre Completo" [(ngModel)]="cliente.nombre"
                   #clienteNombre="ngModel" [ngClass]="{ 'is-invalid': f.submitted && clienteNombre.invalid }" required>
               <div class="invalid-feedback">
                   <div>No se ingreso el nombre</div>
               </div>
         </div>
-        <div class="form-group">
-              <label for="authorImage">Imagen</label>
-              <input type="text" name="clienteImage" class="form-control" id="clienteImage" [(ngModel)]="cliente.image"
-                  #clienteImage="ngModel" [ngClass]="{ 'is-invalid': f.submitted && clienteImage.invalid }" required>
-              <div class="invalid-feedback">
-                  <div>No se ingreso la ruta de la imagen</div>
-              </div>
-              <small id="passwordHelp" class="form-text text-muted">Ruta de la imagen que desea</small>
-          </div>
+        
           <div class="row form-inline justify-content-center align-self-center">
-              <button type="submit" class="btn btn-success">Create</button>
+              <button type="submit" class="btn btn-success" (click)="createCliente()">Create</button>
               <div class="divider col-1"> </div>
               <button type="button" class="btn btn-danger" (click)="cancelCreation()">Cancel</button>
           </div>
