--- a/src/app/cliente/cliente-list/cliente-list.component.html
+++ b/src/app/cliente/cliente-list/cliente-list.component.html
@@ -4,19 +4,15 @@
         <table class = "table table-hover">
           <thead class="thead-dark">
             <tr>
-              <th style="background-color :#4da6ff
-              ; text-align: center" class="text-center">Clientes</th>
+              <th style="text-align: center" class="text-center">Clientes</th>
             </tr>
           </thead>
         <br>
           <tbody>
             
                 <tr *ngFor = "let c of clientes"  class="list-group-item-action">
-                <div>
-  
-                  <h5 style="cursor: pointer" class="text-center" (click)="onSelected(c.id)">{{c.login}} <img src="http://icons.iconarchive.com/icons/pelfusion/long-shadow-media/512/Camera-icon.png" class="img-fluid" alt="Responsive image" height="62" width="62" ></h5>
+                  <h5 style="cursor: pointer" class="text-center" (click)="onSelected(c.id)">{{c.login}} <div class="divider col-1"></div><img src="http://icons.iconarchive.com/icons/pelfusion/long-shadow-media/512/Camera-icon.png" class="img-fluid" alt="Responsive image" height="62" width="62" ></h5>
                   <hr>
-                </div>
               </tr>
             
           </tbody>
