--- a/src/app/ronda/ronda-list/ronda-list.component.html
+++ b/src/app/ronda/ronda-list/ronda-list.component.html
@@ -32,9 +32,9 @@
             </tr>
         </thead>
       <tbody>
-        <tr *ngFor = "let ronda of rondaes">
+        <tr *ngFor = "let ronda of rondas">
             <td style="cursor: pointer;"> 
-                <dd style="text-align: center;" routerLink="/rondaes/{{ronda.id}}" >{{ronda.numRonda}}</dd>
+                <dd style="text-align: center;" routerLink="/rondas/{{ronda.id}}" >{{ronda.numRonda}}</dd>
               </td> 
               <td>
                   <button class="btn btn-primary" (click)="showHideEdit(ronda.id)"><span class="fa fa-pencil"></span></button>
@@ -44,7 +44,7 @@
     </table>
     <div class="col-md-8">
         <div *ngIf="showEdit">
-            <app-ronda-edit [ronda_id]="ronda_edit_id" (cancel)="showHideEdit(ronda_edit_id)" (update)="updateronda()"></app-ronda-edit>
+          <app-ronda-edit [ronda_id]="ronda_edit_id" (cancel)="showHideEdit(ronda_edit_id)" (update)="updateRonda()"></app-ronda-edit>
         </div>
     </div>
   </div>
