--- a/src/app/organizador/organizador-list/organizador-list.component.html
+++ b/src/app/organizador/organizador-list/organizador-list.component.html
@@ -1,36 +1,50 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-4">
-            <br>
-            <div class="row justify-content-center align-self-center">
-                <button [ngClass]="{ 'btn-primary': !showCreate, 'btn-danger': showCreate }" type="button" class="btn"
-                    (click)="showHideCreate()">Create an organizador</button>
-            </div>
-            <br>
-            <br>
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th class="h4">Organizador´s Name</th>    
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor = "let organizador of organizadors"
-                        (click)="onSelected(organizador.id)">
-                        <td style="cursor: pointer;"> 
-                <dd>{{organizador.name}}</dd>
-                </td>
-                </tr>
-                </tbody>
-            </table>
+<div class="pin-layout">
+    <div class="thumbnail">
+        <br>
+        <div class="row justify-content-center align-self-center">
+            <button [ngClass]="{ 'btn-primary': !showCreate, 'btn-danger': showCreate }" type="button" class="btn"
+                (click)="showHideCreate()">Crear organizador</button>
         </div>
-        <div class="col-8">
-            <div *ngIf="selectedOrganizador">
-                <app-organizador-detail [organizadorDetail]="selectedOrganizador"></app-organizador-detail>
-            </div>
+        <br>
+        <div class="col-md-8">
             <div *ngIf="showCreate">
-                <app-organizador-create (cancel)="showHideCreate()" (create)="ngOnInit()"></app-organizador-create>
+                <app-organizador-create (cancel)="showHideCreate()" (create)="ngOnInit()" *ngIf="showCreate"></app-organizador-create>
             </div>
-        </div>   
+        </div>
+        <br>
+      <style>
+        table, th, td{
+          width:100%; 
+          border: 1px solid black;
+          border-collapse: collapse;
+          align-self: center;
+        }
+        th, td {
+          padding: 15px;
+          background-color:rgb(247, 247, 247);
+        }
+      </style>
+      <table >
+          <thead>
+              <tr>
+                  <th style="background-color:rgba(164, 210, 255, 0.877); text-align: center" class="caption">organizador</th>    
+              </tr>
+          </thead>
+        <tbody>
+          <tr *ngFor = "let organizador of organizadors">
+              <td style="cursor: pointer;"> 
+                  <dd style="text-align: center;" routerLink="/organizadors/{{organizador.id}}" >{{organizador.nombre}}</dd>
+              </td>
+              <td>
+                  <button class="btn btn-primary" (click)="showHideEdit(organizador.id)"><span class="fa fa-pencil"></span></button>
+              </td>
+          </tr>
+      </tbody>
+    </table>
+    <div class="col-md-8">
+        <div *ngIf="showEdit">
+            <app-organizador-edit [organizador_id]="organizador_edit_id" (cancel)="showHideEdit(organizador_edit_id)" (update)="updateOrganizador()"></app-organizador-edit>
+        </div>
+    </div>
     </div>
 </div>
