--- a/src/app/ronda/ronda-detail/ronda-detail.component.html
+++ b/src/app/ronda/ronda-detail/ronda-detail.component.html
@@ -5,7 +5,7 @@
           <div class="col">
               <dl>     
                   <dt style="background-color:rgb(247, 247, 247); text-align: center">Numero Ronda</dt>
-                  <dd style="background-color:rgb(247, 247, 247); text-align: center">{{rondaDetail.numeroRonda}}</dd>
+                  <dd style="background-color:rgb(247, 247, 247); text-align: center">{{rondaDetail.numRonda}}</dd>
               </dl>
           </div>
 
