Funcional de factura perfecto

--- a/src/app/factura/factura-detail/factura-detail.component.html
+++ b/src/app/factura/factura-detail/factura-detail.component.html
@@ -1,3 +1,15 @@
-<p>
-  factura-detail works!
-</p>
+<div class="panel-body">
+    <div class="border margin">
+        <p style="background-color:rgba(164, 210, 255, 0.877); text-align: center" class="h3 p-3">{{facturaDetail.numero}}<p> 
+        <div class="row">
+            <div class="col">
+                <dl>  
+                    <dt style="background-color:rgb(247, 247, 247); text-align: center">Precio</dt>
+                    <dd style="background-color:rgb(247, 247, 247); text-align: center">{{facturaDetail.precio}}</dd>
+
+                </dl>
+            </div>
+  
+        </div>
+    </div>
+  </div>
