--- a/src/app/factura/factura-list/factura-list.component.html
+++ b/src/app/factura/factura-list/factura-list.component.html
@@ -1,3 +1,50 @@
-<p>
-  factura-list works!
-</p>
+<div class="pin-layout">
+    <div class="thumbnail">
+        <br>
+        <div class="row justify-content-center align-self-center">
+            <button [ngClass]="{ 'btn-primary': !showCreate, 'btn-danger': showCreate }" type="button" class="btn"
+                (click)="showHideCreate()">Crear Factura</button>
+        </div>
+        <br>
+        <div class="col-md-8">
+            <div *ngIf="showCreate">
+                <app-factura-create (cancel)="showHideCreate()" (create)="ngOnInit()" *ngIf="showCreate"></app-factura-create>
+            </div>
+        </div>
+        <br>
+      <style>
+        table, th, td{
+          width:100%; 
+          border: 1px solid black;
+          border-collapse: collapse;
+          align-self: center;
+        }
+        th, td {
+          padding: 15px;
+          background-color:rgb(247, 247, 247);
+        }
+      </style>
+      <table >
+          <thead>
+              <tr>
+                  <th style="background-color:rgba(164, 210, 255, 0.877); text-align: center" class="caption">Factura</th>    
+              </tr>
+          </thead>
+        <tbody>
+          <tr *ngFor = "let factura of facturas">
+              <td style="cursor: pointer;"> 
+                  <dd style="text-align: center;" routerLink="/facturas/{{factura.id}}" >{{factura.number}}</dd>
+              </td>
+              <td>
+                  <button class="btn btn-primary" (click)="showHideEdit(factura.id)"><span class="fa fa-pencil"></span></button>
+              </td>
+          </tr>
+      </tbody>
+    </table>
+    <div class="col-md-8">
+        <div *ngIf="showEdit">
+            <app-factura-edit [factura_id]="factura_edit_id" (cancel)="showHideEdit(factura_edit_id)" (update)="updateFactura()"></app-factura-edit>
+        </div>
+    </div>
+    </div>
+</div>
