--- a/src/app/factura/factura-create/factura-create.component.html
+++ b/src/app/factura/factura-create/factura-create.component.html
@@ -1,3 +1,44 @@
-<p>
-  factura-create works!
-</p>
+<div class="row">
+  <div class="col-3"></div>
+  <div class="col-6">
+    <br>
+    <h2 class="text-center">Crear Factura</h2>
+    <br>
+    <form name="factura" (ngSubmit)="f.form.valid && createFactura()" #f="ngForm" novalidate>
+      <div class="form-group">
+        <label for="facturaNumero"><b>Numero de la factura</b></label>
+        <input type="text" name="facturaNumero" class="form-control" id="facturaNumero" [(ngModel)]="factura.numero" #facturaNumero="ngModel"
+          [ngClass]="{ 'is-invalid': f.submitted && facturaNumero.invalid }" required>
+        <div class="invalid-feedback">
+          <div>El Numero de la factura falta</div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="facturaPrecio"><b>Precio de la factura</b></label>
+        <input type="text" name="facturaPrecio" class="form-control" id="facturaPrecio" [(ngModel)]="factura.precio" #facturaPrecio="ngModel"
+          [ngClass]="{ 'is-invalid': f.submitted && facturaPrecio.invalid }" required>
+        <div class="invalid-feedback">
+          <div>El Precio de la factura falta</div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="facturaFecha"><b>Fecha de compra</b></label>
+        <div [ngClass]="{ 'is-invalid': f.submitted && facturaFecha.invalid }">
+          <input class="form-control" id="facturaFecha" name="facturaFecha" [(ngModel)]="factura.fechaCompra" ngbDatepicker #d="ngbDatepicker"
+            (click)="d.toggle()" #facturaFecha="ngModel" [ngClass]="{'is-invalid': f.submitted && ( facturaFecha.invalid) }"
+            required>
+          <div class="invalid-feedback">
+            <div>Fecha de compra falta</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row form-inline justify-content-center align-self-center">
+        <button type="submit" class="btn btn-primary">Create</button>
+        <div class="divider"></div>
+        <button type="button" class="btn btn-danger" (click)="cancelCreation()">Cancel</button>
+      </div>
+    </form>
+  </div>
+  <div class="col-3"></div>
+</div>
