Estetica de Photo terminada

--- a/src/app/photo/photo-detail/photo-detail.component.html
+++ b/src/app/photo/photo-detail/photo-detail.component.html
@@ -1,33 +1,15 @@
-<<div class="panel panel-default">
-  <div>
-    <div class="border margin">
-      <p class="h3 p-3">{{photoDetail.name}}</p>
-      <div class="row">
-        <div class="col-md-3">
-          
-                    <div class="thumb">
-                        <img class="img-fluid" src="{{photoDetail.rutaImagen}}"/>
-                    </div>
-                    
-        </div>
-        <div class="col-md-3">
-          <dl>
-            <dt> Descripcion</dt>
-            <dd>{{photoDetail.description}}</dd>
-            <hr>
-            <dt>Fecha</dt>
-            <dd>{{photoDetail.date| date:'yyyy-MM-dd'}}</dd>
-            <hr>
-            <!--
-            <dt class="bold">Fotografo</dt>
-            <dd class="caption" routerLink="/editorials/{{bookDetail.editorial.id}}">{{bookDetail.editorial.name}}</dd>
-            <hr>
-            -->
-            <dt class="bold">Description</dt>
-            <dd>{{photoDetail.description}}</dd>
-          </dl>
-        </div>
-      </div>
-    </div>
+<div>
+  <img src="{{photoDetail.rutaFoto}}" class="fotoFondo">
+  <div class="top">
+    <dt> Descripcion</dt>
+    <dd>{{photoDetail.description}}</dd>
+    <hr>
+    <dt>Fecha</dt>
+    <dd>{{photoDetail.date| date:'yyyy-MM-dd'}}</dd>
+    <hr>
+    <dt>Precio</dt>
+    <dd>{{photoDetail.price}}</dd>
+    <hr>
   </div>
 </div>
+
