--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,10 @@
                         &nbsp;
                         &nbsp;
                         <li><a id="calificacion-navbar-item" routerLink="/photos/list"> Fotos</a></li>
+                        &nbsp;
+                        &nbsp;
+                        <li><a id="calificacion-navbar-item" routerLink="/facturas/list"> Facturas</a></li>
+
                     </div>
                     <div class="navbar-nav ml-auto flex-column">
                         <div class="flex-row" *ngxPermissionsOnly="['GUEST']">
