--- a/src/app/photo/photo-list/photo-list.component.css
+++ b/src/app/photo/photo-list/photo-list.component.css
@@ -15,7 +15,7 @@ button {
   position: relative;
   display: grid;
   grid-template-columns: repeat(4, minmax(200px, 1fr));
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows:  repeat(4, minmax(400px, 1fr));
   grid-gap: 2px;
 }
 
