--- a/src/app/cliente/cliente-detail/cliente-detail.component.html
+++ b/src/app/cliente/cliente-detail/cliente-detail.component.html
@@ -33,3 +33,5 @@
 </div>
 
 
+<p class="h3 p-3"> Formas de pago: </p>
+    <app-forma-de-pago-list [formasDePago]="clienteDetail.formasDePago"></app-forma-de-pago-list>
