--- a/src/app/auth/auth-login/auth-login.component.html
+++ b/src/app/auth/auth-login/auth-login.component.html
@@ -1,3 +1,45 @@
+<div class="bd-example">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://www.nationalgeographic.com/content/dam/photography/rights-exempt/best-of-photo-of-the-day/2018/june/03_best-pod-june-18.ngsversion.1531168256893.adapt.1900.1.jpg" class="d-block w-100" alt="..." height="800" width="810">
+          <div class="carousel-caption d-none d-md-block">
+            <h2>Snap it, upload it, win it!</h2>
+            <p>La mejor forma de compartir tus fotos y ganar con ellas. Las mejores fotografías a un solo clic de distancia.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://static.boredpanda.com/blog/wp-content/uploads/2018/03/sony-world-photography-awards-winners-2018-68-5ab2223b3a024__880.jpg" class="d-block w-100" alt="..." height="800" width="810">
+          <div class="carousel-caption d-none d-md-block">
+            <h2>Snap it, upload it, win it!</h2>
+            <p>La mejor forma de compartir tus fotos y ganar con ellas. Las mejores fotografías a un solo clic de distancia.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://iso.500px.com/wp-content/uploads/2015/12/top.jpg" class="d-block w-100" alt="..." height="800" width="810">
+          <div class="carousel-caption d-none d-md-block">
+            <h2>Snap it, upload it, win it!</h2>
+            <p>La mejor forma de compartir tus fotos y ganar con ellas. Las mejores fotografías a un solo clic de distancia.</p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div> 
+
+
 <div class="row">
     <div class="col-6 offset-3">
         <br>
